<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_discussion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cli.knowledgebase.CreateDiscussionActivity">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lay_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/actionBarSize"
        android:orientation="vertical"
        android:padding="10dp">


        <widgets.MyEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_quiz_broder"
            android:hint="@string/et_hint_description_title"
            android:padding="10dp" />


        <widgets.MyEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_quiz_broder"
            android:gravity="top"
            android:hint="@string/et_hint_description"
            android:padding="10dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp">

        <widgets.MyTextView_bold
            android:id="@+id/tv_draft_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_quiz_buttons"
            android:enabled="false"
            android:padding="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/draft"
            android:textColor="@color/white" />

        <widgets.MyTextView_bold
            android:id="@+id/tv_publish_blog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_quiz_buttons"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/publish"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>
