<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.cli.knowledgebase.ProfileActivity">


    <include layout="@layout/toolbar"></include>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <widgets.CircleImageView
                android:id="@+id/iv_profile_pic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@mipmap/ic_placeholderimage" />

            <widgets.MyTextView_medium
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <widgets.MyTextView
                android:id="@+id/tv_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="18sp" />


            <widgets.MyTextView_medium
                android:id="@+id/tv_update_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_shape_login"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/upload_picture"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_quiz_broder"
            android:orientation="vertical"
            android:padding="10dp">

            <widgets.MyTextView_medium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:orientation="vertical">


                    <widgets.MyEditText
                        android:id="@+id/et_current_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_quiz_broder"
                        android:hint="@string/et_hint_current_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <widgets.MyEditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_quiz_broder"
                        android:hint="@string/et_hint_new_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <widgets.MyEditText
                        android:id="@+id/et_retype_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_quiz_broder"
                        android:hint="@string/et_hint_retype_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black" />


                    <widgets.MyTextView_medium
                        android:id="@+id/tv_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/bg_shape_login"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/change_picture"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <include layout="@layout/toolbar"></include>


</LinearLayout>
