<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_master_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <widgets.MyTextView_medium
                    android:id="@+id/tv_assignment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"

                    android:textSize="18sp" />

                <widgets.MyTextView
                    android:id="@+id/tv_assignment_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/duration"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <widgets.MyTextView
                    android:id="@+id/tv_assignment_expries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/assignment_expires"
                    android:textSize="16sp" />

                <widgets.MyTextView
                    android:id="@+id/tv_assignment_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/created"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <widgets.MyTextView_bold
                    android:id="@+id/tv_start_assignment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_shape_login"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <widgets.MyTextView_bold
                    android:id="@+id/tv_assignment_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/bg_shape_login"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>


    