<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="2dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <widgets.CircleImageView
            android:id="@+id/iv_teammates"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_placeholderimage" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <widgets.MyTextView_medium
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_leader"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <widgets.MyTextView
                android:id="@+id/tv_invited_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <widgets.MyTextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/lay_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <widgets.MyTextView_medium
                    android:id="@+id/tv_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_quiz_buttons"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/accept"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <widgets.MyTextView_medium
                    android:id="@+id/tv_reject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_shape_red"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/reject"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>


    